added find endpoint
