# docs/swagger.json
@@ -20,7 +20,7 @@
     "paths": {
         "/users": {
             "get": {
-                "description": "List all User by ID",
+                "description": "Filter Users by query paramenters",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,7 +30,27 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "List all Users",
+                "summary": "Filter Users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "User createdAt start date",
+                        "name": "start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "User createdAt end date",
+                        "name": "end",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -43,9 +63,6 @@
                     },
                     "400": {
                         "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
